# Rust_practice

./: Cargo.toml
src/: main.rs  scraping_test.rs
