[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json", "blocking"]}
scraper = "0.19.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }